# Raytracer

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  math.cpp  math.hpp  test.cpp
plugins/ambientlight/: AmbientLight.cpp  AmbientLight.hpp  CMakeLists.txt
plugins/cone/: CMakeLists.txt  Cone.cpp  Cone.hpp
plugins/cylinder/: CMakeLists.txt  Cylinder.cpp  Cylinder.hpp
plugins/directionallight/: CMakeLists.txt  DirectionalLight.cpp  DirectionalLight.hpp
plugins/light/: CMakeLists.txt  Light.cpp  Light.hpp
plugins/plan/: CMakeLists.txt  Plan.cpp  Plan.hpp
plugins/sphere/: CMakeLists.txt  Sphere.cpp  Sphere.hpp
plugins/spotlight/: CMakeLists.txt  SpotLight.cpp  SpotLight.hpp
plugins/triangle/: CMakeLists.txt  Triangle.cpp  Triangle.hpp
scenes/: all.cfg  boulelumiere.cfg  cone.cfg  cones.cfg  cylinder.cfg  example.cfg  gravity.cfg  gruyère.cfg  plan.cfg  pyramid.cfg  solarsystem.cfg  test.cfg  triangle.cfg  true_test.cfg
src/: Factory.cpp  Factory.hpp  File.cpp  File.hpp  Math.cpp  Math.hpp  Observer.cpp  Observer.hpp  Textfield.cpp  Textfield.hpp  main.cpp  math.cpp  math.hpp
src/Core/: Core.cpp  Core.hpp  LibLoader.hpp
src/Elements/: AElement.hpp  Camera.cpp  Camera.hpp  Data.cpp  Data.hpp  IElement.hpp  Light.cpp  Light.hpp  Plan.cpp  Plan.hpp  Primitive.cpp  Primitive.hpp  Sphere.cpp  Sphere.hpp
src/PPM_generator/: Generation.cpp  Generation.hpp
src/Scene/: Scene.cpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp
